--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="photo.png" width="200" alt="A pic of me"></td>
+            <td><img src="img/photo.png" width="200" alt="A pic of me"></td>
             <td><h1>Steven Avalos</h1>
                 <p><em>Founder and CTO of <strong>ADAT.</strong></em></p>
                 <p>I am a eternal student, love Python and my daughter. Tacos are love, dude ♥</p></td>
